# jellycat-analytics

./: .gitignore  Dockerfile.flink  Dockerfile.producer  Dockerfile.spark  LICENSE  README.md  docker-compose.yml  flink_job.py  producer.py  pyproject.toml  sentiment_utils.py  spark_job.py
docker/clickhouse/initdb/: 01_init.sql
helm/jellycat-jobs/: Chart.yaml  values.yaml
helm/jellycat-jobs/templates/: flink-deployment.yaml  spark-deployment.yaml
k8s/base/: externalsecret.yaml
scripts/: generate_sample_data.py
